--- a/nginx.conf
+++ b/nginx.conf
@@ -21,5 +21,12 @@ http {
         location / {
             try_files $uri $uri/ =404;
         }
+
+        # Health check endpoint for Coolify
+        location /health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
+        }
     }
 }
